@@ -31,15 +31,16 @@ CUTS_CUTE_Property_Locator (CUTS_CUTE_Model_Interpreter_Action_List & actions)
 //
 // visit_Folder
 //
-void CUTS_CUTE_Property_Locator::visit_Folder (GAME::Folder & folder)
+void CUTS_CUTE_Property_Locator::visit_Folder (GAME::Folder_in folder)
 {
   // Test the name of this folder for template parameters.
   // Reset the list for storing the properties.
   if (0 != this->actor_.list ().size ())
     this->actor_.clear ();
 
-  if (this->evaluator_.evaluate (folder.name ().c_str ()) &&
-      0 != this->actor_.list ().size ())
+  bool retval = this->evaluator_.evaluate (folder->name ().c_str ());
+
+  if (retval && 0 != this->actor_.list ().size ())
   {
     // We have found an attribute with one or more template parameters.
     CUTS_CUTE_Model_Interpreter_Action * action = 0;
@@ -55,38 +56,36 @@ void CUTS_CUTE_Property_Locator::visit_Folder (GAME::Folder & folder)
   typedef std::vector <GAME::Folder> folder_set;
   folder_set folders;
 
-  folder.children (folders);
+  folder->children (folders);
 
   std::for_each (folders.begin (),
                  folders.end (),
-                 boost::bind (&folder_set::value_type::accept,
-                              _1,
-                              boost::ref (*this)));
+                 boost::bind (&GAME::Folder::impl_type::accept,
+                              boost::bind (&GAME::Folder::get, _1),
+                              this));
 
   // Then, visit all the FCOs in the folder.
   typedef std::vector <GAME::FCO> fco_set;
   fco_set fcos;
 
-  folder.children (fcos);
+  folder->children (fcos);
 
   std::for_each (fcos.begin (),
                  fcos.end (),
-                 boost::bind (&fco_set::value_type::accept,
-                              _1,
-                              boost::ref (*this)));
+                 boost::bind (&CUTS_CUTE_Property_Locator::visit_FCO, this, _1));
 }
 
 //
 // visit_FCO
 //
-void CUTS_CUTE_Property_Locator::visit_FCO (GAME::FCO & fco)
+void CUTS_CUTE_Property_Locator::visit_FCO (GAME::FCO_in fco)
 {
   // Test the name of this FCO for template parameters.
   // Reset the list for storing the properties.
   if (0 != this->actor_.list ().size ())
     this->actor_.clear ();
 
-  if (this->evaluator_.evaluate (fco.name ().c_str ()) &&
+  if (this->evaluator_.evaluate (fco->name ().c_str ()) &&
       0 != this->actor_.list ().size ())
   {
     // We have found an attribute with one or more template parameters.
@@ -103,7 +102,7 @@ void CUTS_CUTE_Property_Locator::visit_FCO (GAME::FCO & fco)
   typedef std::vector <GAME::Attribute> attribute_set;
   attribute_set attributes;
 
-  fco.attributes (attributes);
+  fco->attributes (attributes);
 
   std::for_each (attributes.begin (),
                  attributes.end (),
@@ -111,47 +110,42 @@ void CUTS_CUTE_Property_Locator::visit_FCO (GAME::FCO & fco)
                               this,
                               _1));
 
-  // If the FCO is a model, we need to visit it as well.
-  if (fco.type () == OBJTYPE_MODEL)
-  {
-    GAME::Model model = GAME::Model::_narrow (fco);
-    model.accept (*this);
-  }
+  // Let's visit this FCO as well.
+  fco->accept (this);
 }
 
 //
 // visit_Model
 //
-void CUTS_CUTE_Property_Locator::visit_Model (GAME::Model & model)
+void CUTS_CUTE_Property_Locator::visit_Model (GAME::Model_in model)
 {
-  typedef std::vector <GAME::FCO> collection_type;
-  collection_type fcos;
-
-  model.children (fcos);
+  std::vector <GAME::FCO> fcos;
+  model->children (fcos);
 
   std::for_each (fcos.begin (),
                  fcos.end (),
-                 boost::bind (&collection_type::value_type::accept,
-                              _1,
-                              boost::ref (*this)));
+                 boost::bind (&CUTS_CUTE_Property_Locator::visit_FCO,
+                              this,
+                              _1));
 }
 
 //
 // visit_Attribute
 //
-void CUTS_CUTE_Property_Locator::visit_Attribute (GAME::Attribute & attr)
+void CUTS_CUTE_Property_Locator::visit_Attribute (GAME::Attribute_in attr)
 {
   // Determine if attribute string has a template parameter. Right now,
   // we can only handle string value types.
-  if (attr.meta ().type () != ATTVAL_STRING)
+  if (attr->meta ()->type () != ATTVAL_STRING)
     return;
 
   // Reset the list for storing the properties.
   if (0 != this->actor_.list ().size ())
     this->actor_.clear ();
 
-  if (this->evaluator_.evaluate (attr.string_value ().c_str ()) &&
-      0 != this->actor_.list ().size ())
+  bool retval = this->evaluator_.evaluate (attr->string_value ().c_str ());
+
+  if (retval && 0 != this->actor_.list ().size ())
   {
     // We have found an attribute with one or more template parameters.
     CUTS_CUTE_Model_Interpreter_Action * action = 0;
