@@ -1,3 +1,14 @@
+Mon Jan 17 03:59:42 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * MDE/GME/plugins/cute/CUTE_Impl.h:
+        * MDE/GME/plugins/cute/CUTE_Impl.cpp:
+        * MDE/GME/plugins/cute/Model_Interpreter.cpp:
+        * MDE/GME/plugins/cute/Model_Interpreter_Action.cpp:
+        * MDE/GME/plugins/cute/Property_Locator.h:
+        * MDE/GME/plugins/cute/Property_Locator.cpp:
+
+          Updated to latest version of GAME.
+
 Mon Jan 17 03:13:17 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * MDE/GME/paradigms/PICML/interpreter/quotas/specification/Quotas_Specification_Impl.h:
